nginx-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web1-deployment
  labels:
    app: webservice1
spec:
  replicas: 2
  selector:
    matchLabels:
	    app: webservice1
  template:
    metadata: 
	  labels:
	    app: webservice1
	spec:
	  containers:
	  - name: webservice1
	    image: nareit/rishi:webservice1
		ports:
		- containerPort: 80
