nginx-svc.yml
apiVersion: apps/v1
kind: Service
metadata:
  name: webservice1
  labels:
    app: webservice1
spec:
   type: NodePort
   ports:
   - port: 80
     targetPort: 80
	 protocol: TCP
   selector:
     app: webservice1
