nginx-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
     annotation:
        kubernets.io/ingress.class: nginx
        nginx.ingress.kubernets.io/rewrite-target: /
     name: ingress-nginx    
spec:
   rules:
   - host: path.pavan.ga
     http:
       paths:
       - path: /web1
         backend:
           serviceName: webservice1
           servicePort: 80
       - path: /web2
         backend:
           serviceName: webservice1
           servicePort: 80
       - path: /web2
         backend:
           serviceName: webservice1
           servicePort: 80              
              
   tls:
   - secretName: joomla-tls-cert
       hosts:
       - YOUR_DOMAIN
