web3-ing.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: webservice3
  #namespace: webservice3
  annotations:
    kubernetes.io/ingress.class: "naren-ingress"
    #kubernetes.io/tls-acme: "true"
    # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - hosts:
      #    - webservice3.naren.ga
      #    secretName: foo-secret
  rules:
  - host: webservice3.naren.ga
    http:
      paths:
      - backend:
          serviceName: webservice3
          servicePort: 80
